crates/solidity-v2/testing/snapshots/diagnostics_output/resolution/incompatible_built_in_target/blobhash/generated/slang/00-frontier-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

Error: This built-in was introduced in EVM target 'Cancun'.
   ╭─[input.sol:6:16]
   │
 6 │         return blobhash(0);
   │                ────┬───  
   │                    ╰───── Error occurred here.
───╯
